# lcp-py

./: .gitignore  README.md  dev-install.sh  install.sh  pyproject.toml
lcp/: __init__.py  __main__.py  cli.py  config.py  core.py  docker_manager.py  hardware.py  model_analyzer.py  models.py  service.py
lcp/backends/: __init__.py  base.py  huggingface.py
lcp/ui/: __init__.py  ansi_processor.py  chat.py  chat.py.backup  simple_markdown_renderer.py
