[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcp"
dynamic = ["version"]
description = "LlamaCP - Advanced model management and chat interface for llama.cpp"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "LCP Project" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "toml>=0.10.0",
    "pyyaml>=6.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.20.0",
    "tqdm>=4.65.0",
    "platformdirs>=3.0.0",
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
lcp = "lcp.cli:main"

[project.urls]
Documentation = "https://github.com/example/lcp"
Issues = "https://github.com/example/lcp/issues"
Source = "https://github.com/example/lcp"

[tool.hatch.version]
path = "lcp/__init__.py"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true